# CiteSage

./: .claudeignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GAPS.md  PROJECT.md  README.md  config.yaml  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: rag-reviewer.yaml
.claude/skills/: eval-debug.md  rag-component.md
.github/workflows/: test.yml
data/documents/: bert_pretraining.md  diffusion_models.md  fine_tuning_transfer_learning.md  gpt_autoregressive_lm.md  layer_normalization.md  lstm_gru.md  optimizers.md  positional_encoding_variants.md  quantization.md  recurrent_neural_networks.md  regularization_dropout.md  retrieval_augmented_generation.md  tokenization.md  transformer_architecture.md  vision_transformers.md  word_embeddings.md
docs/architecture/: overview.md
docs/phases/: PHASE1_MVP.md  PHASE2_HYBRID.md  PHASE3_EVALUATION.md  PHASE3_STATUS.md  PHASE4_DEPLOYMENT.md
reports/: baseline_ollama.json  baseline_ollama_errors.jsonl
reports/archive/pre-tuning/: README.md  baseline_errors.jsonl  baseline_scores.json  eval_errors.jsonl
scripts/: compare_retrieval.py  retrieval_recall.py
scripts/hooks/: block-hardcoded-prompts.sh
src/citesage/: __main__.py  cli.py
src/citesage/api/: CLAUDE.md  main.py
src/citesage/config/: __init__.py
src/citesage/evaluation/: CLAUDE.md  __init__.py  __main__.py  check_regression.py  run_eval.py
src/citesage/generation/: CLAUDE.md  __init__.py  citation_verifier.py  generator.py
src/citesage/graph/: CLAUDE.md  __init__.py  nodes.py  pipeline.py  state.py
src/citesage/ingestion/: CLAUDE.md  __init__.py  chunker.py  loaders.py  models.py  pipeline.py  storage.py
src/citesage/prompts/: __init__.py
src/citesage/prompts/v1/: decline.yaml  eval_grade.yaml  generate.yaml  grade.yaml  transform_query.yaml  verify_citation.yaml  verify_citations.yaml
src/citesage/retrieval/: CLAUDE.md  __init__.py  _types.py  reranker.py  retriever.py  rrf.py
src/citesage/ui/: app.py
src/citesage/utils/: __init__.py  cost_tracker.py  llm_factory.py
tests/: conftest.py
tests/eval/: golden_dataset.json
tests/integration/: test_api.py  test_graph_routing.py
tests/unit/: test_budget_guard.py  test_chunker.py  test_citation_check.py  test_config.py  test_cost_tracker.py  test_eval_metrics.py  test_ingestion.py  test_rrf.py
