[project]
name = "citesage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.3",
    "markdownify>=1.2.2",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1.0",
    "streamlit>=1.40.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src-layout: the importable package is src/citesage. Without a [build-system]
# `uv sync` treats this as a virtual project and never installs citesage, so a
# fresh clone (and CI) fails with ModuleNotFoundError on every `import
# citesage` — local dev only worked because of a manual editable install.
[tool.hatch.build.targets.wheel]
packages = ["src/citesage"]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.15.8",
]
